# Lab-Notebook

./: .env.example  .gitignore  AGENTS.md  docker-compose.yml  package.json
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 7e083eebb345_init_core_schema.py  9522e0451b33_add_attachments_and_record_versions.py  c3f4a8c61c2a_add_auth_role_and_audit_logs.py
apps/api/app/: main.py
apps/api/app/api/: deps.py  router.py
apps/api/app/api/routes/: attachments.py  audit_logs.py  auth.py  health.py  llm.py  projects.py  records.py  templates.py  versions.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  session.py
apps/api/app/models/: __init__.py  attachment.py  audit_log.py  base.py  project.py  record.py  template.py  user.py  version.py
apps/api/app/schemas/: attachment.py  audit.py  auth.py  llm.py  project.py  record.py  template.py  version.py
apps/api/app/services/: audit.py  auth.py  diffing.py  field_registry.py  permissions.py  record_builder.py  record_field_values.py  record_workflow.py  serializers.py  storage.py  template_builder.py  template_field_registry.py  user_resolver.py  versioning.py
apps/api/app/services/llm/: base.py  factory.py  providers.py
apps/api/scripts/: seed_dev_user.py  seed_generic_template.py
apps/api/tests/: test_permissions.py  test_record_workflow.py
apps/web/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
apps/web/scripts/: copy-ketcher-assets.mjs
apps/web/src/: App.vue  main.ts  style.css
apps/web/src/api/: attachments.ts  audit.ts  auth.ts  (+5 more)
(+42 files in other folders)
